--- a/homeStyle.css
+++ b/homeStyle.css
@@ -24,10 +24,11 @@
     gap: 0.8rem;
     width: 100%;
     height: 3.2rem;
+    position: fixed ;
   }
-  .mainDoc{
-    /* background-color: bisque; */
-  }
+  /* .mainDoc{
+    /* background-color: bisque;
+  } */
   .menuButton{
     display: inline;
     padding: 10px 30px;
